# vercel-topmodel

./: main.py  models.py  pyproject.toml  requirements.txt  test_sow_live.py  vercel.json
.kiro/specs/legal-advisor-system/: .config.kiro  design.md  requirements.md  tasks.md
agents/: __init__.py  account_seizure.py  base.py  insolvency.py  source_of_wealth.py
api/: index.py
context/: __init__.py  store.py
executor/: __init__.py  executor.py  validation.py
legal_advisor_system.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
registry/: __init__.py  registry.py
supervisor/: __init__.py  classifier.py  dispatcher.py  supervisor.py  synthesizer.py
tests/: __init__.py
tests/integration/: __init__.py
tests/property/: __init__.py
tests/unit/: __init__.py  test_classifier.py  test_context_store.py  test_dispatcher.py  test_executor.py  test_supervisor.py  test_synthesizer.py  test_validation.py
