[project]
name = "legal-advisor-system"
version = "0.1.0"
description = "Agentic chatbot for legal questions in German banking operations (account seizures, insolvency proceedings)"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.5.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "httpx>=0.25.0",
    "parallel>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "hypothesis>=6.92.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "property: property-based tests using Hypothesis",
    "unit: unit tests for specific examples and edge cases",
    "integration: integration tests for full pipeline",
]

[tool.setuptools.packages.find]
include = ["executor*", "supervisor*", "agents*", "registry*", "context*"]
